[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SIG"
version = "0.0.1"
authors = [
  { name="Alexander Brown", email="alex.brown7711@gmail.com" },
]
description = "Generates dynamic publishers and subscribers application interfaces using YAML files for multiple languages."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pyyaml == 6.0.1"
]

[project.urls]
Homepage = "https://github.com/alexb7711/socket-interface-generation"
Issues = "https://github.com/alexb7711/socket-interface-generation/issues"

[tool.setuptools]
packages =  ["SIG"]
